<resources>
    <string name="app_name">ColorBlindness</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Color Blindness</string>
    <string name="nav_header_subtitle">contactus@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="first_number">First number</string>
    <string name="second_number">Second number</string>
    <string name="guide">You have to enter the number(s) for each plate you can see. If you don\'t see anything enter 0. There will be 12 plates.</string>
    <string name="col1">Plate</string>
    <string name="col2">Your answer</string>
    <string name="col3">Correct</string>
    <string name="row1Plate">Plate 01</string>
    <string name="row2Plate">Plate 02</string>
    <string name="row3Plate">Plate 03</string>
    <string name="row4Plate">Plate 04</string>
    <string name="row5Plate">Plate 05</string>
    <string name="row6Plate">Plate 06</string>
    <string name="row7Plate">Plate 07</string>
    <string name="row8Plate">Plate 08</string>
    <string name="row9Plate">Plate 09</string>
    <string name="row10Plate">Plate 10</string>
    <string name="row11Plate">Plate 11</string>
    <string name="row12Plate">Plate 12</string>
    <string name="row1Age">0</string>
    <string name="row1Correct">74</string>
    <string name="row2Correct">6</string>
    <string name="row3Correct">16</string>
    <string name="row4Correct">2</string>
    <string name="row5Correct">29</string>
    <string name="row6Correct">7</string>
    <string name="row7Correct">45</string>
    <string name="row8Correct">5</string>
    <string name="row9Correct">97</string>
    <string name="row10Correct">8</string>
    <string name="row11Correct">42</string>
    <string name="row12Correct">3</string>
    <string name="row2Name">Dave</string>
    <string name="row2Age">0</string>
    <string name="row2Surname">Smith</string>
    <string name="row3Name">Jason</string>
    <string name="row3Age">0</string>
    <string name="row3Surname">William</string>
    <string name="dr_name">dr Name</string>
    <string name="short_bio">Dr. bio</string>
    <string name="dr_address">Dr addres</string>
    <string name="dr_whatsapp">Whatsapp</string>
    <string name="dr_call">Call</string>
    <string name="dr_mail">Email</string>
    <string name="hex_formate">Hex: #000000</string>
    <string name="rgb_formate">RGB: 0,0,0</string>
</resources>